tests/negative/syntax/unknown-token/test.smol
package test;

class Test {
	static main$() Unit {
		var x String = "foo";
	}
}
